--- a/.codeintel/config
+++ b/.codeintel/config
@@ -2,7 +2,7 @@
     "Python": {
         "python": '/usr/bin/python',
         "pythonExtraPaths": [
-            "~/django/guayaba_survey/venv/lib/python2.7/site-packages"
+            "/home/pakiko/django/guayaba_survey/venv/lib/python2.7/site-packages"
         ]
     }
 }
